--- a/src/pages/Benifits.css
+++ b/src/pages/Benifits.css
@@ -1,8 +1,9 @@
 .benefitsbody{
+    padding-top: 100px;
     display: grid;
     grid-template-rows: 100px 400px 100px 70px;
     grid-template-columns: auto auto auto;
-    height: 1080px;
+    height: 900px;
     background: rgba(68, 10, 103, 0.03);
     align-items: center;
     padding: 0px 80px;
@@ -120,23 +121,26 @@
 
 #student-content{
     position: absolute;
+    box-sizing: border-box;
     width: 850px;
     height: 650px;
     border-radius: 50px;
     visibility: hidden;
     opacity: 0;
     font-size: 30px;
-    background: rgba(68, 10, 103, 0.0);
+    background: rgba(255, 10, 103,0.0);
     transition: 1s;
     text-align: center;
     border-radius: 20px;
     z-index: 1;
     transform: scale(0.5);
     transition: all 0.5s;
+    padding-left: 20%;
 }
 
 #company-content{
     position: absolute;
+    box-sizing: border-box;
     width: 850px;
     height: 650px;
     visibility: hidden;
@@ -149,12 +153,14 @@
     z-index: 1;
     transform: translate(-65%,0%) scale(0.5);
     transition: all 0.5s;
+    padding-left: 20%;
 }
 
 #college-content{
     position: absolute;
-    width: 900px;
-    height: 700px;
+    box-sizing: border-box;
+    width: 850px;
+    height: 650px;
     visibility: hidden;
     opacity: 0;
     font-size: 30px;
@@ -165,12 +171,13 @@
     z-index: 1;
     transform: translateX(-130%) scale(0.5);
     transition: all 0.5s;
+    padding-left: 20%;
 }
 
 
 #know-more-1:hover ~ #benefit-circle-1 #student-ellipse{
     transition: all 0.5s;
-    transform: translateX(-40%) scale(3.4);
+    transform: translateX(-40%) scale(3);
 }
 
 #know-more-1:hover ~ #benefit-circle-1 #student-content{
@@ -253,39 +260,118 @@
     opacity: 0;
 }
 
-#know-more-3:hover(:has(+ .know-more)){
-    opacity: 0;
-}
-
 #student-title,#company-title,#college-title{
-    position: absolute;
-    top: 110px;
-    left: 390px;
+    position: relative;
     font-size: 50px;
     font-weight: 700;
     text-align: start;
 }
 
 #student-content > p{
-    position: absolute;
-    top: 240px;
-    left: 390px;
+    position: relative;
     font-size: 17px;
     text-align: start;
 }
 
 #college-content > p{
-    position: absolute;
-    top: 240px;
-    left: 390px;
+    position: relative;
     font-size: 17px;
     text-align: start;
 }
 
 #company-content > p{
-    position: absolute;
-    top: 240px;
-    left: 390px;
+    position: relative;
     font-size: 17px;
     text-align: start;
+}
+
+.content-feature{
+    margin-top: 100px;
+    font-size: 15px;
+    font-weight: 700;
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-row-gap: 30px;
+    grid-column-gap: 30px;
+    text-align: start;
+}
+
+#student-1-img{
+    background: url("../assets/student-1.png");
+    height: 60px;
+    width: 60px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin-bottom: 20px;
+}
+
+#student-2-img{
+    background: url("../assets/student-2.png");
+    height: 60px;
+    width: 60px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin-bottom: 20px;
+}
+
+#student-3-img{
+    background: url("../assets/student-3.png");
+    height: 60px;
+    width: 60px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin-bottom: 20px;
+}
+
+#company-1-img{
+    background: url("../assets/company-1.png");
+    height: 60px;
+    width: 60px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin-bottom: 20px;
+}
+
+#company-2-img{
+    background: url("../assets/company-2.png");
+    height: 60px;
+    width: 60px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin-bottom: 20px;
+}
+
+#company-5-img{
+    background: url("../assets/company-5.png");
+    height: 60px;
+    width: 60px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin-bottom: 20px;
+}
+
+#college-5-img{
+    background: url("../assets/college-5.png");
+    height: 60px;
+    width: 60px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin-bottom: 20px;
+}
+
+#college-6-img{
+    background: url("../assets/college-6.png");
+    height: 60px;
+    width: 60px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin-bottom: 20px;
 }
