--- a/src/pages/Ourofferings.css
+++ b/src/pages/Ourofferings.css
@@ -52,8 +52,8 @@ section:hover .parttwo{
 .card{
     height: 500px; 
     width: 620px; 
-    margin-left: 60px;
-    margin-top:500px;
+     margin-top: 370px;
+     margin-left: 30px;
     background-color: white;
     border-radius: 20px;
     transition: all 0.7s;
@@ -68,6 +68,18 @@ section:hover .parttwo{
     align-items: center;
      flex-direction:row;
      height: 700px;
+}
+@media all and (max-width :1200px){
+    .holder{
+        flex-direction: column;
+        height: 1500px;
+    }
+    .ourofferingsbody{
+        height: 1600px;
+    }
+    .card{
+        margin-top: 30px;
+    }
 }
 .icon1{
     height: 60px; 
