--- a/src/pages/Whorwe.css
+++ b/src/pages/Whorwe.css
@@ -3,7 +3,16 @@
     height: 700px;
     display: flex ; 
     flex-direction: row ;
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
      
+}
+@media all and (max-width : 1200px) {
+    .whorwebody{
+        height: 1200px;
+        flex-direction: column; 
+    }
 }
 .heading{
     font-family: 'BhuTuka Expanded One', cursive;
@@ -24,9 +33,9 @@ color: #251A2B;
     width: auto;
     height: auto;
 }
-img{
+.picture{
     position: relative;
-    width: 387px;
+    width: 587px;
     height: auto;
     margin-left: 20px;
      
@@ -102,6 +111,6 @@ color: #000000;
     margin: 200px ; 
     margin-left: 140px;
     margin-right: 0%;
-    margin-top: 80px;
+    margin-top: 0px;
 }
  
