--- a/src/pages/meetteam.css
+++ b/src/pages/meetteam.css
@@ -6,18 +6,18 @@
 }
 .head{
     font-family: 'BhuTuka Expanded One', cursive;
-  font-family: 'Rajdhani', sans-serif;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 500;
-font-size: 60px;
-line-height: 73px;
-text-align: left;
-letter-spacing: -0.13005px;
+    font-family: 'Rajdhani', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 60px;
+    line-height: 73px;
+    text-align: left;
+    letter-spacing: -0.13005px;
 
    margin-top: 40px;
    margin-bottom: 30px;
    color : white;
-   margin-left: 150px;
+   margin-left: 50px;
    padding: 70px;
    padding-bottom: 0%;
    padding-top: 90px;
@@ -26,7 +26,7 @@ letter-spacing: -0.13005px;
 }
 .desc{
     width: 350px;
-    margin-left: 225px;
+    margin-left: 125px;
     margin-top: 0%;
     color: white; 
     
@@ -40,16 +40,30 @@ letter-spacing: -0.13005px;
     border: none; 
     color: white; 
     background-color: #FFC916;
-    left : 300px ; 
+    left : 200px ; 
 
     font-size: x-large; 
     font-weight: 800;
     margin: 100px;
-    margin-left: 230px;
+    margin-left: 120px;
     margin-top : 60px;
 }
- 
-
+.CEO{
+    width: 230px;
+    border-radius: 30px;
+    margin: 18px;
+    margin-top: 100px;
+}
+.COO{
+    width: 230px;
+    border-radius: 30px;
+    margin: 18px;
+}
+.CPO{
+    width: 230px;
+    border-radius: 30px;
+    margin: 18px;
+}
 
 
  
