--- a/src/pages/meetteam.css
+++ b/src/pages/meetteam.css
@@ -49,18 +49,18 @@
     margin-top : 60px;
 }
 .CEO{
-    width: 230px;
+    width: 16vw;
     border-radius: 30px;
     margin: 18px;
     margin-top: 100px;
 }
 .COO{
-    width: 230px;
+    width: 16vw;
     border-radius: 30px;
     margin: 18px;
 }
 .CPO{
-    width: 230px;
+    width: 16vw;
     border-radius: 30px;
     margin: 18px;
 }
